# ramulator

./: .gitignore  CMakeLists.txt  Help.java  Help.py  LICENSE  Makefile  README.md  STTMRAM.stats  analyze_workloads.py  calc_weighted_speedup_spec.py  compare_DDR3_parser_cmds  cpu.trace  dram.trace  gem5-0e86fac7254c-ramulator.patch  gem5-config.cfg  ideal_DRAM_parser_cmds  multicore_stats_parser_cmds  plot.py  ramulator-config.cfg  row_bank_tradeoffs_parser_cmds  run_freescale.py  run_hadoop.py  run_mediabench.py  run_redis_ycsb.py  run_spec.py  single_stats_parser_cmds  stats_analyzer.py  test_ddr3.py  test_ramulator.py  test_spec.py  trace_gen.py  workload_stats.py
SoC-configs/: DDR3-1066E-config.cfg  DDR3-1333G-config.cfg  DDR3-1600H-config.cfg  DDR3-2133L-bank128-config.cfg  DDR3-2133L-bank16-config.cfg  DDR3-2133L-bank256-config.cfg  DDR3-2133L-bank32-config.cfg  DDR3-2133L-bank64-config.cfg  DDR3-2133L-noDRAMlat-config.cfg  DDR3-2133L-unlimitBW-config.cfg  DDR3-800D-config.cfg  DDR4-2400R-config.cfg  DDR4-2400R-disable-bg-config.cfg  GDDR5-7000-bank256-config.cfg  GDDR5-7000-bank32-config.cfg  GDDR5-7000-bank512-config.cfg  GDDR5-7000-bank64-config.cfg  GDDR5-7000-config.cfg  GDDR5-7000-disable-bg-config.cfg  GDDR5-7000-disable-bg-larger-REFI-config.cfg  GDDR5-7000-ideal-lat-BW-config.cfg  HBM-1000-bank256-config.cfg  HBM-1000-bank32-config.cfg  HBM-1000-bank512-config.cfg  HBM-1000-bank64-config.cfg  HBM-1000-config.cfg  HBM-1000-unlimitBW-config.cfg  HMC-RoBaCoVa-bank16-config.cfg  HMC-RoBaCoVa-config.cfg  HMC-RoCoBaBgVa-config.cfg  HMC-bank128-config.cfg  (+9 more)
(+297 files in other folders)
